--- a/FinalProjectVR/Areas/Admin/Views/About/Index.cshtml
+++ b/FinalProjectVR/Areas/Admin/Views/About/Index.cshtml
@@ -6,7 +6,7 @@
 <div class="container-fluid">
     <div class="card shadow mb-4">
         <div class="card-body">
-            <div class="table-responsive">
+            <div class="table-responsive overflow-hidden">
 
 
     @if ((bool)ViewBag.ShowButton)
@@ -47,7 +47,9 @@
                                 </td>
                                 <td>
                                     <a href="~/Admin/About/UpdateAbout/@item.Id" class="btn btn-success"><i class="fas fa-edit"></i></a>
-                                    <a href="~/Admin/About/DeleteAbout/@item.Id" class="btn btn-warning"><i class="fas fa-trash-alt"></i></a>
+                                 
+                                    <button class="btn btn-warning delete-button" data-id="@item.Id"><i class="fas fa-trash-alt"></i></button>
+
                                 </td>
                             </tr>
                         }
@@ -58,3 +60,54 @@
     </div>
 </div>
 
+
+@section Scripts {
+    <script>
+        $(document).ready(function () {
+            $(".delete-button").click(function (e) {
+                e.preventDefault();
+
+                var itemId = $(this).data("id");
+                var itemName = $(this).data("name");
+
+                Swal.fire({
+                    title: 'Əminsən?',
+                    text: "!",
+                    icon: 'warning',
+                    showCancelButton: true,
+                    confirmButtonColor: '#3085d6',
+                    cancelButtonText: "Ləğv et",
+                    cancelButtonColor: '#d33',
+                    confirmButtonText: 'Bəli'
+                }).then((result) => {
+                    if (result.isConfirmed) {
+                        $.ajax({
+                            method: "POST",
+                            url: "/Admin/About/DeleteAbout/",
+                            data: {
+                                id: itemId
+                            },
+                            success: function () {
+                                Swal.fire({
+                                    title: 'Aktivlik Vəziyyəti Dəyişdi!',
+                                    text: "'" + itemName + "' Uğurlu",
+                                    icon: 'success',
+                                    onClose: function () {
+                                        location.reload();
+                                    }
+                                });
+                            },
+                            error: function () {
+                                Swal.fire({
+                                    title: 'Xəta!',
+                                    text: "Dəyişmə zamanı xəta baş verdi",
+                                    icon: 'error'
+                                });
+                            }
+                        });
+                    }
+                });
+            });
+        });
+    </script>
+}
