--- a/FinalProjectVR/Areas/Admin/Views/ContactUs/Index.cshtml
+++ b/FinalProjectVR/Areas/Admin/Views/ContactUs/Index.cshtml
@@ -11,7 +11,7 @@
 <div class="container-fluid">
     <div class="card shadow mb-4">
         <div class="card-body">
-            <div class="table-responsive">
+            <div class="table-responsive overflow-hidden">
 
 
 
@@ -21,44 +21,48 @@
 
 
                 <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0">
-                    
-                    <thead>
-                    <tr>
 
-                        <th>Adı Soyadı</th>
-                        <th>Email</th>
-                        <th>Başlıq</th>
-                        <th>Messaj</th>
-                        <th>Activlik</th>
-                        <th></th>
-                    </tr>
+                    <thead>
+                        <tr>
+
+                            <th>Adı Soyadı</th>
+                            <th>Email</th>
+                            <th>Başlıq</th>
+                            <th>Messaj</th>
+                            <th>Activlik</th>
+                            <th></th>
+                        </tr>
                     </thead>
                     <tbody>
-                    @foreach (var item in Model.Data)
-                    {
-                        <tr>
-                            <td>@item.Name @item.Surname</td>
-                            <td>@item.Email</td>
-                            <td>@item.Subject</td>
-                            <td>@item.Message</td>
-                            <td>
-                                @if (item.Delete == 0)
-                                {
-                                    <span class="badge badge-success">Aktiv</span>
-                                }
-                                else
-                                {
-                                    <span class="badge badge-warning">Passiv</span>
-                                }
-                            </td>
-                            <td>
-                                <a href="~/Admin/ContactUs/UpdateContactUs/@item.Id" class="btn btn-success"><i class="fas fa-edit"></i></a>
-                                <a href="~/Admin/ContactUs/DeleteContactUs/@item.Id" class="btn btn-warning"><i class="fas fa-trash-alt"></i></a>
-                                <a class="btn btn-danger btnDelete" data-id="@item.Id" data-name="@item.Name">
-                                    <i class="fas fa-trash"></i>
-                            </td>
-                        </tr>
-                    }
+                        @foreach (var item in Model.Data)
+                        {
+                            <tr>
+                                <td>@item.Name @item.Surname</td>
+                                <td>@item.Email</td>
+                                <td>@item.Subject</td>
+                                <td>@item.Message</td>
+                                <td>
+                                    @if (item.Delete == 0)
+                                    {
+                                        <span class="badge badge-success">Aktiv</span>
+                                    }
+                                    else
+                                    {
+                                        <span class="badge badge-warning">Passiv</span>
+                                    }
+                                </td>
+                                <td>
+                                    <a href="~/Admin/ContactUs/UpdateContactUs/@item.Id" class="btn btn-success"><i class="fas fa-edit"></i></a>
+
+                                    <a class="btn btn-warning btnDelete" data-id="@item.Id" data-name="@item.Name">
+                                        <i class="fas fa-trash"></i>
+                                    </a>
+                                    <a class="btn btn-danger btnHardDelete" data-id="@item.Id" data-name="@item.Name">
+                                        <i class="fas fa-trash"></i>
+                                    </a>
+                                </td>
+                            </tr>
+                        }
                     </tbody>
                 </table>
             </div>
@@ -70,7 +74,7 @@
 
 @section Scripts {
     <script>
-        $(".btnDelete").click(function () {
+        $(".btnHardDelete").click(function () {
             var itemId = $(this).data("id");
             var itemName = $(this).data("name");
 
@@ -105,6 +109,50 @@
                             Swal.fire({
                                 title: 'Xəta!',
                                 text: "Silinmə zamanı xəta baş verdi",
+                                icon: 'error'
+                            });
+                        }
+                    });
+                }
+            });
+        });
+    </script>
+    <script>
+        $(".btnDelete").click(function () {
+            var itemId = $(this).data("id");
+            var itemName = $(this).data("name");
+
+            Swal.fire({
+                title: 'Əminsən?',
+                text: "!",
+                icon: 'warning',
+                showCancelButton: true,
+                confirmButtonColor: '#3085d6',
+                cancelButtonText: "Ləğv et",
+                cancelButtonColor: '#d33',
+                confirmButtonText: 'Bəli '
+            }).then((result) => {
+                if (result.isConfirmed) {
+                    $.ajax({
+                        method: "POST",
+                        url: "/Admin/ContactUs/DeleteContactUs/",
+                        data: {
+                            id: itemId
+                        },
+                        success: function () {
+                            Swal.fire({
+                                title: 'Aktivlik Vəziyyəti Dəyişdi!!',
+                                text: "'" + itemName + "' Uğurlu",
+                                icon: 'success',
+                                onClose: function () {
+                                    window.location.reload();
+                                }
+                            });
+                        },
+                        error: function () {
+                            Swal.fire({
+                                title: 'Xəta!',
+                                text: "Dəyişmə zamanı xəta baş verdi",
                                 icon: 'error'
                             });
                         }
