--- a/FinalProjectVR/Areas/Admin/Views/FAQ/Index.cshtml
+++ b/FinalProjectVR/Areas/Admin/Views/FAQ/Index.cshtml
@@ -11,12 +11,12 @@
 <div class="container-fluid">
     <div class="card shadow mb-4">
         <div class="card-body">
-            <div class="table-responsive">
+            <div class="table-responsive overflow-hidden">
 
 
                 <p>
 
-                    <a href="~/Admin/Blog/AddBlog" class="btn btn-primary">@DefaultConstantValue.ADD_MESSAGE</a>
+                    <a href="~/Admin/FAQ/AddFAQ" class="btn btn-primary">@DefaultConstantValue.ADD_MESSAGE</a>
                 </p>
 
                 <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0">
@@ -28,33 +28,130 @@
                             <th></th>
                         </tr>
                     </thead>
-                    <tbody>
-                        @foreach (var item in Model)
-                        {
-                            <tr>
-                                <td>@item.Question</td>
-                                <td>@item.Answer</td>
-                                <td>
-                                    @if (item.Delete == 0)
-                                    {
-                                        <span class="badge badge-success">Aktiv</span>
-                                    }
-                                    else
-                                    {
-                                        <span class="badge badge-warning">Passiv</span>
-                                    }
-                                </td>
-                                <td>
-                                    <a href="~/Admin/FAQ/UpdateFAQ/@item.Id" class="btn btn-success"><i class="fas fa-edit"></i></a>
-                                    <a href="~/Admin/FAQ/DeleteFAQ/@item.Id" class="btn btn-warning"><i class="fas fa-trash-alt"></i></a>
-                                    <a href="~/Admin/FAQ/HardDeleteFAQ/@item.Id" class="btn btn-danger"><i class="fas fa-times"></i></a>
-                                </td>
-                            </tr>
-                        }
-                    </tbody>
+                    @foreach (var item in Model)
+                    {
+                        <tr>
+                            <td>@item.Question</td>
+                            <td>@item.Answer</td>
+                            <td>
+                                @if (item.Delete == 0)
+                                {
+                                    <span class="badge badge-success">Aktiv</span>
+                                }
+                                else
+                                {
+                                    <span class="badge badge-warning">Passiv</span>
+                                }
+                            </td>
+                            <td>
+                                <a href="~/Admin/FAQ/UpdateFAQ/@item.Id" class="btn btn-success"><i class="fas fa-edit"></i></a>
+
+
+                                <button class="btn btn-warning btnDelete" data-id="@item.Id"><i class="fas fa-trash-alt"></i></button>
+
+                              
+                                <button class="btn btn-danger hard-delete-button" data-id="@item.Id"><i class="fas fa-times"></i></button>
+                            </td>
+                        </tr>
+                    }
                 </table>
             </div>
         </div>
     </div>
 </div>
 
+
+@section Scripts {
+    <script>
+        $(document).ready(function () {
+            $(".hard-delete-button").click(function (e) {
+                e.preventDefault();
+
+                var itemId = $(this).data("id");
+                var itemName = $(this).data("name");
+
+                Swal.fire({
+                    title: 'Əminsən?',
+                    text: "Geri döndərə bilməyəcəksiz!",
+                    icon: 'warning',
+                    showCancelButton: true,
+                    confirmButtonColor: '#3085d6',
+                    cancelButtonText: "Ləğv et",
+                    cancelButtonColor: '#d33',
+                    confirmButtonText: 'Bəli'
+                }).then((result) => {
+                    if (result.isConfirmed) {
+                        $.ajax({
+                            method: "POST",
+                            url: "/Admin/FAQ/HardDeleteFAQ/",
+                            data: {
+                                id: itemId
+                            },
+                            success: function () {
+                                Swal.fire({
+                                    title: 'Silindi!',
+                                    text: "'" + itemName + "' silindi",
+                                    icon: 'success',
+                                    onClose: function () {
+                                        location.reload();
+                                    }
+                                });
+                            },
+                            error: function () {
+                                Swal.fire({
+                                    title: 'Xəta!',
+                                    text: "Silinmə zamanı xəta baş verdi",
+                                    icon: 'error'
+                                });
+                            }
+                        });
+                    }
+                });
+            });
+        });
+    </script>
+    <script>
+        $(".btnDelete").click(function () {
+            var itemId = $(this).data("id");
+            var itemName = $(this).data("name");
+
+            Swal.fire({
+                title: 'Əminsən?',
+                text: "!",
+                icon: 'warning',
+                showCancelButton: true,
+                confirmButtonColor: '#3085d6',
+                cancelButtonText: "Ləğv et",
+                cancelButtonColor: '#d33',
+                confirmButtonText: 'Bəli '
+            }).then((result) => {
+                if (result.isConfirmed) {
+                    $.ajax({
+                        method: "POST",
+                        url: "/Admin/ContactUs/DeleteContactUs/",
+                        data: {
+                            id: itemId
+                        },
+                        success: function () {
+                            Swal.fire({
+                                title: 'Aktivlik Vəziyyəti Dəyişdi!!',
+                                text: "'" + itemName + "' Uğurlu",
+                                icon: 'success',
+                                onClose: function () {
+                                    window.location.reload();
+                                }
+                            });
+                        },
+                        error: function () {
+                            Swal.fire({
+                                title: 'Xəta!',
+                                text: "Dəyişmə zamanı xəta baş verdi",
+                                icon: 'error'
+                            });
+                        }
+                    });
+                }
+            });
+        });
+    </script>
+}
