--- a/FinalProjectVR/Areas/Admin/Views/Order/Index.cshtml
+++ b/FinalProjectVR/Areas/Admin/Views/Order/Index.cshtml
@@ -4,11 +4,11 @@
     ViewData["Title"] = "Index";
     Layout = "~/Areas/Admin/Views/Shared/_AdminLayout.cshtml";
 }
-
+<h1>Sifarişlərimiz</h1>
 <div class="container-fluid">
     <div class="card shadow mb-4">
         <div class="card-body">
-            <div class="table-responsive">
+            <div class="table-responsive overflow-hidden">
                 <p>
                     <a href="/Admin/Order/ExportExelOrder" class="btn btn-primary">Sifariş Cədvəli Yüklə</a>
                 </p>
@@ -45,8 +45,12 @@
                                 </td>
                                 <td>
                                     <a href="~/Admin/Order/UpdateOrder/@item.Id" class="btn btn-success"><i class="fas fa-edit"></i></a>
-                                    <a href="~/Admin/Order/DeleteOrder/@item.Id" class="btn btn-warning"><i class="fas fa-trash-alt"></i></a>
-                                    <a href="~/Admin/Order/HardDeleteOrder/@item.Id" class="btn btn-danger"><i class="fas fa-times"></i></a>
+                                    <a class="btn btn-warning btnDelete" data-id="@item.Id" data-name="@item.Name">
+                                        <i class="fas fa-trash"></i>
+                                    </a>
+                                    <a class="btn btn-danger btnHardDelete" data-id="@item.Id" data-name="@item.Name">
+                                        <i class="fas fa-trash"></i>
+                                    </a>
                                 </td>
                             </tr>
                         }
@@ -57,4 +61,93 @@
     </div>
 </div>
 
+@section Scripts {
+    <script>
+        $(".btnHardDelete").click(function () {
+            var itemId = $(this).data("id");
+            var itemName = $(this).data("name");
 
+            Swal.fire({
+                title: 'Əminsən?',
+                text: "Geri döndərə bilməyəcəksiz!",
+                icon: 'warning',
+                showCancelButton: true,
+                confirmButtonColor: '#3085d6',
+                cancelButtonText: "Ləğv et",
+                cancelButtonColor: '#d33',
+                confirmButtonText: 'Bəli '
+            }).then((result) => {
+                if (result.isConfirmed) {
+                    $.ajax({
+                        method: "POST",
+                        url: "/Admin/Order/HardDeleteOrder/",
+                        data: {
+                            id: itemId
+                        },
+                        success: function () {
+                            Swal.fire({
+                                title: 'Silindi!',
+                                text: "'" + itemName + "' silindi",
+                                icon: 'success',
+                                onClose: function () {
+                                    window.location.reload();
+                                }
+                            });
+                        },
+                        error: function () {
+                            Swal.fire({
+                                title: 'Xəta!',
+                                text: "Silinmə zamanı xəta baş verdi",
+                                icon: 'error'
+                            });
+                        }
+                    });
+                }
+            });
+        });
+    </script>
+    <script>
+        $(".btnDelete").click(function () {
+            var itemId = $(this).data("id");
+            var itemName = $(this).data("name");
+
+            Swal.fire({
+                title: 'Əminsən?',
+                text: "!",
+                icon: 'warning',
+                showCancelButton: true,
+                confirmButtonColor: '#3085d6',
+                cancelButtonText: "Ləğv et",
+                cancelButtonColor: '#d33',
+                confirmButtonText: 'Bəli '
+            }).then((result) => {
+                if (result.isConfirmed) {
+                    $.ajax({
+                        method: "POST",
+                        url: "/Admin/Order/DeleteOrder/",
+                        data: {
+                            id: itemId
+                        },
+                        success: function () {
+                            Swal.fire({
+                                title: 'Aktivlik Vəziyyəti Dəyişdi!!',
+                                text: "'" + itemName + "' Uğurlu",
+                                icon: 'success',
+                                onClose: function () {
+                                    window.location.reload();
+                                }
+                            });
+                        },
+                        error: function () {
+                            Swal.fire({
+                                title: 'Xəta!',
+                                text: "Dəyişmə zamanı xəta baş verdi",
+                                icon: 'error'
+                            });
+                        }
+                    });
+                }
+            });
+        });
+    </script>
+}
