--- a/FinalProjectVR/Areas/Admin/Views/PriceDescription/Index.cshtml
+++ b/FinalProjectVR/Areas/Admin/Views/PriceDescription/Index.cshtml
@@ -13,7 +13,7 @@
 <div class="container-fluid">
     <div class="card shadow mb-4">
         <div class="card-body">
-            <div class="table-responsive">
+            <div class="table-responsive overflow-hidden">
 
 
                 <p>
@@ -48,9 +48,11 @@
                                     }
                                 </td>
                                 <td>
-                                    <a href="~/Admin/PriceDescription/UpdatePDescription/@item.Id" class="btn btn-success"><i class="fas fa-edit"></i></a>
-                                    <a href="~/Admin/PriceDescription/DeletePDescription/@item.Id" class="btn btn-warning"><i class="fas fa-trash-alt"></i></a>
-                                    <a class="btn btn-danger btnDelete" data-id="@item.Id" data-name="@item.Description">
+                                    <a href="~/Admin/PriceDescription/UpdatePDescription/@item.Id" class="btn btn-success"><i class="fas fa-edit"></i></a> 
+                                    <a class="btn btn-warning btnDelete" data-id="@item.Id" data-name="@item.Description">
+                                        <i class="fas fa-trash"></i>
+                                    </a>
+                                    <a class="btn btn-danger HardDelete" data-id="@item.Id" data-name="@item.Description">
                                         <i class="fas fa-trash"></i>
                                     </a>
                                 </td>
@@ -66,7 +68,7 @@
 
 @section Scripts {
     <script>
-        $(".btnDelete").click(function () {
+        $(".HardDelete").click(function () {
             var itemId = $(this).data("id");
             var itemName = $(this).data("name");
 
@@ -101,6 +103,50 @@
                             Swal.fire({
                                 title: 'Xəta!',
                                 text: "Silinmə zamanı xəta baş verdi",
+                                icon: 'error'
+                            });
+                        }
+                    });
+                }
+            });
+        });
+    </script>
+    <script>
+        $(".btnDelete").click(function () {
+            var itemId = $(this).data("id");
+            var itemName = $(this).data("name");
+
+            Swal.fire({
+                title: 'Əminsən?',
+                text: "!",
+                icon: 'warning',
+                showCancelButton: true,
+                confirmButtonColor: '#3085d6',
+                cancelButtonText: "Ləğv et",
+                cancelButtonColor: '#d33',
+                confirmButtonText: 'Bəli '
+            }).then((result) => {
+                if (result.isConfirmed) {
+                    $.ajax({
+                        method: "POST",
+                        url: "/Admin/PriceDescription/DeletePDescription/",
+                        data: {
+                            id: itemId
+                        },
+                        success: function () {
+                            Swal.fire({
+                                title: 'Aktivlik Vəziyyəti Dəyişdi!!',
+                                text: "'" + itemName + "' Uğurlu",
+                                icon: 'success',
+                                onClose: function () {
+                                    window.location.reload();
+                                }
+                            });
+                        },
+                        error: function () {
+                            Swal.fire({
+                                title: 'Xəta!',
+                                text: "Dəyişmə zamanı xəta baş verdi",
                                 icon: 'error'
                             });
                         }
