--- a/FinalProjectVR/Areas/Admin/Views/Pricing/Index.cshtml
+++ b/FinalProjectVR/Areas/Admin/Views/Pricing/Index.cshtml
@@ -9,14 +9,12 @@
 
 
 
-
+<h1>Qiymətlərimiz</h1>
 
 <div class="container-fluid">
     <div class="card shadow mb-4">
         <div class="card-body">
-            <div class="table-responsive">
-
-
+            <div class="table-responsive overflow-hidden">
                 <p>
                     <a href="~/Admin/Pricing/AddPricing" class="btn btn-primary">@DefaultConstantValue.ADD_MESSAGE</a>
                 </p>
@@ -50,9 +48,12 @@
                                 </td>
                                 <td>
                                     <a href="~/Admin/Pricing/UpdatePricing/@item.Id" class="btn btn-success"><i class="fas fa-edit"></i></a>
-                                    <a href="~/Admin/Pricing/DeletePricing/@item.Id" class="btn btn-warning"><i class="fas fa-trash-alt"></i></a>
-                                    <a href="~/Admin/Pricing/HardDeletePricing/@item.Id" class="btn btn-danger"><i class="fas fa-times"></i></a>
-                                </td>
+                                    <a class="btn btn-warning btnDelete" data-id="@item.Id" data-name="@item.Title">
+                                        <i class="fas fa-trash"></i>
+                                    </a>
+                                    <a class="btn btn-danger btnHardDelete" data-id="@item.Id" data-name="@item.Title">
+                                        <i class="fas fa-trash"></i>
+                                    </a>
                             </tr>
                         }
                     </tbody>
@@ -64,3 +65,93 @@
 
 
 
+@section Scripts {
+    <script>
+        $(".btnHardDelete").click(function () {
+            var itemId = $(this).data("id");
+            var itemName = $(this).data("name");
+
+            Swal.fire({
+                title: 'Əminsən?',
+                text: "Geri döndərə bilməyəcəksiz!",
+                icon: 'warning',
+                showCancelButton: true,
+                confirmButtonColor: '#3085d6',
+                cancelButtonText: "Ləğv et",
+                cancelButtonColor: '#d33',
+                confirmButtonText: 'Bəli '
+            }).then((result) => {
+                if (result.isConfirmed) {
+                    $.ajax({
+                        method: "POST",
+                        url: "/Admin/Pricing/HardDeletePricing/",
+                        data: {
+                            id: itemId
+                        },
+                        success: function () {
+                            Swal.fire({
+                                title: 'Silindi!',
+                                text: "'" + itemName + "' silindi",
+                                icon: 'success',
+                                onClose: function () {
+                                    window.location.reload();
+                                }
+                            });
+                        },
+                        error: function () {
+                            Swal.fire({
+                                title: 'Xəta!',
+                                text: "Silinmə zamanı xəta baş verdi",
+                                icon: 'error'
+                            });
+                        }
+                    });
+                }
+            });
+        });
+    </script>
+    <script>
+        $(".btnDelete").click(function () {
+            var itemId = $(this).data("id");
+            var itemName = $(this).data("name");
+
+            Swal.fire({
+                title: 'Əminsən?',
+                text: "!",
+                icon: 'warning',
+                showCancelButton: true,
+                confirmButtonColor: '#3085d6',
+                cancelButtonText: "Ləğv et",
+                cancelButtonColor: '#d33',
+                confirmButtonText: 'Bəli '
+            }).then((result) => {
+                if (result.isConfirmed) {
+                    $.ajax({
+                        method: "POST",
+                        url: "/Admin/Pricing/DeletePricing/",
+                        data: {
+                            id: itemId
+                        },
+                        success: function () {
+                            Swal.fire({
+                                title: 'Aktivlik Vəziyyəti Dəyişdi!!',
+                                text: "'" + itemName + "' Uğurlu",
+                                icon: 'success',
+                                onClose: function () {
+                                    window.location.reload();
+                                }
+                            });
+                        },
+                        error: function () {
+                            Swal.fire({
+                                title: 'Xəta!',
+                                text: "Dəyişmə zamanı xəta baş verdi",
+                                icon: 'error'
+                            });
+                        }
+                    });
+                }
+            });
+        });
+    </script>
+}
