--- a/FinalProjectVR/Areas/Admin/Views/PriceDescription/AddPDescription.cshtml
+++ b/FinalProjectVR/Areas/Admin/Views/PriceDescription/AddPDescription.cshtml
@@ -1,5 +1,4 @@
-﻿@using DTOLayer
-@model DTOLayer.PriceDescriptionDTOs
+﻿@model PriceDescriptionDTOs
 
 @{
     ViewData["Title"] = "AddPDescription";
