--- a/FinalProjectVR/Areas/Admin/_ViewImports.cshtml
+++ b/FinalProjectVR/Areas/Admin/_ViewImports.cshtml
@@ -3,5 +3,10 @@
 @using DTOLayer.AboutDTO
 @using DTOLayer.BlogDTO
 @using DTOLayer.FAQDTO
-
+@using DTOLayer.TeamDTO
+@using DTOLayer.PricingDTO
+@using DTOLayer.PriceDescriptionDTO
+@using DTOLayer.ServiceDTO
+@using DTOLayer.TestimonialDTO
+@using DTOLayer.CommentDTO
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
