--- a/FinalProjectVR/Views/Pricing/Index.cshtml
+++ b/FinalProjectVR/Views/Pricing/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model List<DTOLayer.PricingDTOs>
+﻿@model List<PricingDTOs>
 
     <!-- Start common page title  -->
     <div class="ak-height-125 ak-height-lg-80"></div>
