--- a/FinalProjectVR/Views/_ViewImports.cshtml
+++ b/FinalProjectVR/Views/_ViewImports.cshtml
@@ -1,4 +1,10 @@
 ﻿@using FinalProjectVR
 @using FinalProjectVR.Models
 @using DTOLayer.FAQDTO
+@using DTOLayer.TeamDTO
+@using DTOLayer.CommentDTO
+@using DTOLayer.PricingDTO
+@using DTOLayer.PriceDescriptionDTO
+@using DTOLayer.ServiceDTO
+@using DTOLayer.TestimonialDTO
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
