Blog detail Comment Added , DTO Refactoring

--- a/FinalProjectVR/Views/Pricing/Index.cshtml
+++ b/FinalProjectVR/Views/Pricing/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model List<PricingDTOs>
+﻿@model List<PricingActivDTOs>
 
     <!-- Start common page title  -->
     <div class="ak-height-125 ak-height-lg-80"></div>
