--- a/FinalProjectVR/Areas/Admin/Views/Shared/Components/CommentListAdmin/Default.cshtml
+++ b/FinalProjectVR/Areas/Admin/Views/Shared/Components/CommentListAdmin/Default.cshtml
@@ -10,105 +10,29 @@
             <hr style="margin: 5px 0;">
             <p>@item.Message</p>
         </div>
-      @*   <a class="btn btn-warning btnDelete" data-id="@item.Id" data-name="@item.Name">
-            <i class="fas fa-trash"></i>
-        </a>
-        <a class="btn btn-danger btnHardDelete" data-id="@item.Id" data-name="@item.Name">
-            <i class="fas fa-trash"></i>
-        </a> *@
-  @*       <a asp-action="DeleteComment" asp-controller="Blog" asp-route-id="@item.Id" class="btn btn-warning"><i class="fas fa-trash-alt"></i></a>
-    </div> *@
+
+        @if (item.Delete == 0)
+        {
+            <span class="badge badge-success">Aktiv</span>
+        }
+        else
+        {
+            <span class="badge badge-warning">Passiv</span>
+        }
+
+        <form asp-action="DeleteComment" asp-controller="Comment" method="post">
+            <input type="hidden" name="id" value="@item.Id" />
+            <button type="submit" class="btn btn-warning btnDelete">
+                <i class="fas fa-trash"></i> Delete
+            </button>
+        </form>
+        <form asp-action="HardDeleteComment" asp-controller="Comment" method="post">
+            <input type="hidden" name="id" value="@item.Id" />
+            <button type="submit" class="btn btn-danger btnHardDelete">
+                <i class="fas fa-trash"></i> Hard Delete
+            </button>
+        </form>
+    </div>
 }
 
 
-@* @section Scripts {
-    <script>
-        $(".btnHardDelete").click(function () {
-            var itemId = $(this).data("id");
-            var itemName = $(this).data("name");
-
-            Swal.fire({
-                title: 'Əminsən?',
-                text: "Geri döndərə bilməyəcəksiz!",
-                icon: 'warning',
-                showCancelButton: true,
-                confirmButtonColor: '#3085d6',
-                cancelButtonText: "Ləğv et",
-                cancelButtonColor: '#d33',
-                confirmButtonText: 'Bəli '
-            }).then((result) => {
-                if (result.isConfirmed) {
-                    $.ajax({
-                        method: "POST",
-                        url: "/Admin/Blog/HardDeleteComment/",
-                        data: {
-                            id: itemId
-                        },
-                        success: function () {
-                            Swal.fire({
-                                title: 'Silindi!',
-                                text: "'" + itemName + "' silindi",
-                                icon: 'success',
-                                onClose: function () {
-                                    window.location.reload();
-                                }
-                            });
-                        },
-                        error: function () {
-                            Swal.fire({
-                                title: 'Xəta!',
-                                text: "Silinmə zamanı xəta baş verdi",
-                                icon: 'error'
-                            });
-                        }
-                    });
-                }
-            });
-        });
-    </script>
-    <script>
-        $(".btnDelete").click(function () {
-            var itemId = $(this).data("id");
-            var itemName = $(this).data("name");
-
-            Swal.fire({
-                title: 'Əminsən?',
-                text: "!",
-                icon: 'warning',
-                showCancelButton: true,
-                confirmButtonColor: '#3085d6',
-                cancelButtonText: "Ləğv et",
-                cancelButtonColor: '#d33',
-                confirmButtonText: 'Bəli '
-            }).then((result) => {
-                if (result.isConfirmed) {
-                    $.ajax({
-                        method: "POST",
-                        url: "/Admin/Blog/DeleteComment/",
-                        data: {
-                            id: itemId
-                        },
-                        success: function () {
-                            Swal.fire({
-                                title: 'Aktivlik Vəziyyəti Dəyişdi!!',
-                                text: "'" + itemName + "' Uğurlu",
-                                icon: 'success',
-                                onClose: function () {
-                                    window.location.reload();
-                                }
-                            });
-                        },
-                        error: function () {
-                            Swal.fire({
-                                title: 'Xəta!',
-                                text: "Dəyişmə zamanı xəta baş verdi",
-                                icon: 'error'
-                            });
-                        }
-                    });
-                }
-            });
-        });
-    </script>
-}
- *@
