--- a/FinalProjectVR/Views/Shared/Components/Testimonial/Default.cshtml
+++ b/FinalProjectVR/Views/Shared/Components/Testimonial/Default.cshtml
@@ -59,7 +59,7 @@
                                     “@item.Message”
                                 </h4>
                             </div>
-                            <img src="~/web-cras-three.vercel.app/assets/img/testimaonial.png" alt="..." class="testimaonial-slide-img">
+                            <img src="@item.ImageUrl" alt="..." class="testimaonial-slide-img">
                         </div>
                     </div>
                 }
