--- a/FinalProjectVR/Views/_ViewImports.cshtml
+++ b/FinalProjectVR/Views/_ViewImports.cshtml
@@ -7,4 +7,6 @@
 @using DTOLayer.PriceDescriptionDTO
 @using DTOLayer.ServiceDTO
 @using DTOLayer.TestimonialDTO
+@using DTOLayer.BlogDTO
+
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
