--- a/FinalProjectVR/Areas/Admin/Views/Testimonial/AddTestimonial.cshtml
+++ b/FinalProjectVR/Areas/Admin/Views/Testimonial/AddTestimonial.cshtml
@@ -5,7 +5,7 @@
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="AddTestimonial" method="post">
+        <form asp-action="AddTestimonial" method="post" enctype="multipart/form-data">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="Name" class="control-label">Ad</label>
@@ -21,6 +21,16 @@
                 <label asp-for="Message" class="control-label">Message</label>
                 <textarea asp-for="Message" class="form-control"></textarea>
                 <span asp-validation-for="Message" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Message" class="control-label">Message</label>
+                <textarea asp-for="Message" class="form-control"></textarea>
+                <span asp-validation-for="Message" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="ImageUrl" class="control-label">Şəkil</label>
+                <input asp-for="ImageUrl" name="photoUrl" class="form-control" type="file" />
+                <span asp-validation-for="ImageUrl" class="text-danger"></span>
             </div>
 
             <div class="form-group">
