--- a/FinalProjectVR/Areas/Admin/Views/Testimonial/Index.cshtml
+++ b/FinalProjectVR/Areas/Admin/Views/Testimonial/Index.cshtml
@@ -26,6 +26,7 @@
                             <th>Ad</th>
                             <th>Soyad</th>
                             <th>Mesaj</th>
+                            <th>Şəkil</th>
                             <th></th>
                             <th></th>
                         </tr>
@@ -37,6 +38,7 @@
                                 <td>@item.Name</td>
                                 <td>@item.Suranme</td>
                                 <td>@item.Message</td>
+                                <td><img src="@item.ImageUrl" style="width:100px; height:100px" alt="Image"/></td>
                                 <td>
                                     @if (item.Delete == 0)
                                     {
