--- a/FinalProjectVR/Areas/Admin/Views/Testimonial/UpdateTestimonial.cshtml
+++ b/FinalProjectVR/Areas/Admin/Views/Testimonial/UpdateTestimonial.cshtml
@@ -1,11 +1,9 @@
 ﻿@model TestimonialDTOs
 
-
-
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="UpdateTestimonial">
+        <form asp-action="UpdateTestimonial" enctype="multipart/form-data">
             <input type="hidden" asp-for="Id" />
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
@@ -23,7 +21,11 @@
                 <textarea asp-for="Message" class="form-control"></textarea>
                 <span asp-validation-for="Message" class="text-danger"></span>
             </div>
-
+            <div class="form-group">
+                <label asp-for="ImageUrl" class="control-label">Şəkil</label>
+                <input name="photoUrl" class="form-control" type="file" />
+                <span asp-validation-for="ImageUrl" class="text-danger"></span>
+            </div>
             <div class="form-group">
                 <input type="submit" value="@DefaultConstantValue.Update_MESSAGE" class="btn btn-primary" />
             </div>
