--- a/FinalProjectVR/Views/Team/Index.cshtml
+++ b/FinalProjectVR/Views/Team/Index.cshtml
@@ -26,7 +26,7 @@
                 <div class="col">
                     <div class="member-card" data-aos="fade-up" data-aos-delay="0">
                         <span href="team-single.html">
-                        <img src="~/web-cras-three.vercel.app/assets/img/member_1.jpg" class="member-img ak-bg" alt="..." />
+                        <img src="@item.ImageUrl" class="member-img ak-bg" alt="..." />
                         </span>
                         <div class="member-info">
                             <div class="member-title">
