--- a/FinalProjectVR/Areas/Admin/Views/Team/AddTeam.cshtml
+++ b/FinalProjectVR/Areas/Admin/Views/Team/AddTeam.cshtml
@@ -5,7 +5,7 @@
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="AddTeam" method="post">
+        <form asp-action="AddTeam" method="post" enctype="multipart/form-data">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="Name" class="control-label">Ad</label>
@@ -31,6 +31,11 @@
                 <label asp-for="LinkedInUrl" class="control-label">LinkedIn URL</label>
                 <input asp-for="LinkedInUrl" class="form-control" />
                 <span asp-validation-for="LinkedInUrl" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="ImageUrl" class="control-label">Şəkil</label>
+                <input asp-for="ImageUrl" name="photoUrl" class="form-control" type="file" />
+                <span asp-validation-for="ImageUrl" class="text-danger"></span>
             </div>
 
             <div class="form-group">
