--- a/FinalProjectVR/Areas/Admin/Views/Team/UpdateTeam.cshtml
+++ b/FinalProjectVR/Areas/Admin/Views/Team/UpdateTeam.cshtml
@@ -8,7 +8,7 @@
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="UpdateTeam">
+        <form asp-action="UpdateTeam" enctype="multipart/form-data">
             <input type="hidden" asp-for="Id" />
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
@@ -36,6 +36,12 @@
                 <input asp-for="LinkedInUrl" class="form-control" />
                 <span asp-validation-for="LinkedInUrl" class="text-danger"></span>
             </div>
+            <div class="form-group">
+                <label asp-for="ImageUrl" class="control-label">Şəkil</label>
+                <input name="photoUrl" class="form-control" type="file" />
+                <span asp-validation-for="ImageUrl" class="text-danger"></span>
+            </div>
+
 
 
             <div class="form-group">
