Home View Added, Comment naviqation fixed

--- a/FinalProjectVR/Views/Shared/_Layout.cshtml
+++ b/FinalProjectVR/Views/Shared/_Layout.cshtml
@@ -51,7 +51,7 @@
             <div class="container">
                 <div class="ak-main_header_in">
                     <div class="ak-main-header-left">
-                        <a class="ak-site_branding" href="#">
+                        <a class="ak-site_branding" href="~/Home/Index">
                             <img src="~/web-cras-three.vercel.app/assets/img/logo.svg" alt="...">
                         </a>
                     </div>
