--- a/FinalProjectVR/Views/_ViewImports.cshtml
+++ b/FinalProjectVR/Views/_ViewImports.cshtml
@@ -1,4 +1,5 @@
 ﻿@using FinalProjectVR
+@using FinalProjectVR.ViewModels
 @using DTOLayer.FAQDTO
 @using DTOLayer.TeamDTO
 @using DTOLayer.CommentDTO
