--- a/FinalProjectVR/Views/_ViewImports.cshtml
+++ b/FinalProjectVR/Views/_ViewImports.cshtml
@@ -8,5 +8,6 @@
 @using DTOLayer.ServiceDTO
 @using DTOLayer.TestimonialDTO
 @using DTOLayer.BlogDTO
+@using DTOLayer.MembershipDTO
 
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
