--- a/FinalProjectVR/Areas/Admin/Views/Service/AddService.cshtml
+++ b/FinalProjectVR/Areas/Admin/Views/Service/AddService.cshtml
@@ -25,6 +25,10 @@
                 <input asp-for="Icon" class="form-control" />
                 <span asp-validation-for="Icon" class="text-danger"></span>
             </div>
+            <div class="form-group d-flex align-items-center">
+                <span style="margin-right:1rem;">Ana səhifədə olsun:</span>
+                <input asp-for="isHomePage" type="checkbox" />
+            </div>
 
             <div class="form-group">
                 <input type="submit" value="@DefaultConstantValue.ADD_MESSAGE" class="btn btn-primary" />
