--- a/FinalProjectVR/Areas/Admin/Views/Team/AddTeam.cshtml
+++ b/FinalProjectVR/Areas/Admin/Views/Team/AddTeam.cshtml
@@ -32,6 +32,10 @@
                 <input asp-for="LinkedInUrl" class="form-control" />
                 <span asp-validation-for="LinkedInUrl" class="text-danger"></span>
             </div>
+            <div class="form-group d-flex align-items-center">
+                <span style="margin-right:1rem;">Ana səhifədə olsun:</span>
+                <input asp-for="isHomePage" type="checkbox" />
+            </div>
             <div class="form-group">
                 <label asp-for="ImageUrl" class="control-label">Şəkil</label>
                 <input asp-for="ImageUrl" name="photoUrl" class="form-control" type="file" />
