--- a/FinalProjectVR/Areas/Admin/Views/Shared/_AdminLayout.cshtml
+++ b/FinalProjectVR/Areas/Admin/Views/Shared/_AdminLayout.cshtml
@@ -112,6 +112,12 @@
                     <span>Qiymet Acılqlamalrı</span>
                 </a>
             </li>
+            <li class="nav-item">
+                <a class="nav-link" href="~/Admin/EmailSubscription/Index">
+                    <i class="fa-envelope"></i>
+                    <span>Mail Abone Olanlar</span>
+                </a>
+            </li>
 
 
            
