--- a/FinalProjectVR/Areas/Admin/_ViewImports.cshtml
+++ b/FinalProjectVR/Areas/Admin/_ViewImports.cshtml
@@ -9,4 +9,5 @@
 @using DTOLayer.ServiceDTO
 @using DTOLayer.TestimonialDTO
 @using DTOLayer.CommentDTO
+@using DTOLayer.EmailSubscriptionDTO
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
